# document-studio

./: .gitignore  Makefile  docker-compose.yml  structure  test_generate.py
.github/workflows/: ci-python.yml  ci-rust.yml  release.yml
docker/: Dockerfile.engine  Dockerfile.tests
docs/: api.md  architecture.md
docs/examples/: fintech_letterhead.html  mlms_proposal.html  mlms_proposal_v1.html
scripts/: build.sh  run_tests.sh  seed_data.py
studio-core/: .gitignore  Cargo.toml
studio-core/src/: lib.rs  main.rs
studio-core/src/api/: error.rs  handlers.rs  middleware.rs  mod.rs  router.rs
studio-core/src/api/v1/: auth.rs  document.rs  mod.rs  router.rs
studio-core/src/assets/: mod.rs  resolver.rs
studio-core/src/config/: mod.rs
studio-core/src/converter/: builder.rs  calculations.rs  context.rs  mod.rs
studio-core/src/converter/nodes/: chart.rs  layout.rs  media.rs  mod.rs  qr.rs  table.rs  text.rs
studio-core/src/converter/nodes/table/: cell.rs  formula.rs  mod.rs
studio-core/src/domain/: document.rs  mod.rs  styles.rs
studio-core/src/engines/: mod.rs
studio-core/src/engines/docx/: mod.rs
studio-core/src/engines/graphics/: chart.rs  mod.rs  shape.rs
studio-core/src/engines/html/: converter.rs  mod.rs
studio-core/src/engines/typst/: compiler.rs  fonts.rs  mod.rs  security.rs  world.rs
studio-core/tests/: integration_tests.rs
tests/: client.py  conftest.py  utils.py
tests/e2e/: client.py  fintech_letterhead.py  test_charts_and_graphics.py  test_generate.py  test_header_footer.py  test_invoice_design.py  test_invoice_math.py  test_letterhead_invoice.py  test_letterhead_invoice_example.py  test_locale_math.py  test_nepali_font.py  test_pdf_security.py  test_qr_verification.py
